--- a/package.json
+++ b/package.json
@@ -1,24 +1,45 @@
 {
-  "name": "ludumpad-client",
-  "version": "0.0.1",
-  "description": "LudumPad is an open-source javascript library for using smartphones as gamepads for your games.",
-  "main": "dist/ludumpad.js",
+  "name": "ludumpad",
+  "version": "0.0.0",
+  "description": "Use mobile devices as smart game controllers.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src",
+    "typecheck": "flow",
+    "pretest": "npm run lint && npm run typecheck",
+    "test": "mocha --compilers js:babel-register",
+    "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --compilers js:babel-register",
+    "ci": "dot-only-hunter && npm run coverage && cat ./coverage/lcov.info | coveralls",
+    "build": "babel src --out-dir .",
+    "prepublish": "npm run build"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/AirRider3/ludumpad-client.git"
-  },
-  "author": "David da Silva Contín",
+  "author": "David da Silva <dasilvacontin@gmail.com>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/AirRider3/ludumpad-client/issues"
+  "dependencies": {
+    "bluebird": "^3.3.5",
+    "lodash": "^4.11.1"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-uglify": "~0.2.4",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-concat": "~0.3.0"
+    "babel-cli": "^6.7.5",
+    "babel-eslint": "^6.0.2",
+    "babel-plugin-lodash": "^2.3.0",
+    "babel-plugin-syntax-flow": "^6.5.0",
+    "babel-plugin-transform-flow-strip-types": "^6.7.0",
+    "babel-plugin-transform-runtime": "^6.7.5",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.7.2",
+    "babel-runtime": "^6.6.1",
+    "coveralls": "^2.11.9",
+    "dot-only-hunter": "^1.0.2",
+    "eslint": "^2.8.0",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-plugin-flow-vars": "^0.3.0",
+    "eslint-plugin-promise": "^1.1.0",
+    "eslint-plugin-standard": "^1.3.2",
+    "flow-bin": "^0.23.0",
+    "istanbul": "^1.0.0-alpha.2",
+    "mocha": "^2.4.5",
+    "unexpected": "^10.13.0"
   }
 }
