--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "mocha --compilers js:babel-register",
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --compilers js:babel-register",
     "ci": "dot-only-hunter && npm run coverage && cat ./coverage/lcov.info | coveralls",
-    "build": "babel src --out-dir .",
+    "build": "rsync -av --exclude=*.js src/ . && babel src --out-dir . && browserify client/app.js -o client/bundle.js",
     "prepublish": "npm run build"
   },
   "author": "David da Silva <dasilvacontin@gmail.com>",
@@ -17,17 +17,19 @@
   "dependencies": {
     "bluebird": "^3.3.5",
     "express": "^4.13.4",
+    "howler": "^1.1.29",
     "ip": "^1.1.2",
     "lodash": "^4.11.1",
     "morgan": "^1.7.0",
     "qrcode-terminal": "^0.10.0",
     "robotjs": "^0.4.1",
+    "screenfull": "^3.0.0",
     "socket.io": "^1.4.5"
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
-    "babel-eslint": "^6.0.2",
-    "babel-plugin-lodash": "^2.3.0",
+    "babel-eslint": "^6.0.4",
+    "babel-plugin-lodash": "^3.0.0",
     "babel-plugin-syntax-flow": "^6.5.0",
     "babel-plugin-transform-flow-strip-types": "^6.7.0",
     "babel-plugin-transform-runtime": "^6.7.5",
@@ -36,15 +38,17 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
     "babel-runtime": "^6.6.1",
+    "browserify": "^13.0.0",
     "coveralls": "^2.11.9",
     "dot-only-hunter": "^1.0.2",
-    "eslint": "^2.8.0",
-    "eslint-config-standard": "^5.1.0",
-    "eslint-plugin-flow-vars": "^0.3.0",
+    "eslint": "^2.9.0",
+    "eslint-config-standard": "^5.3.0",
+    "eslint-plugin-flow-vars": "^0.4.0",
     "eslint-plugin-promise": "^1.1.0",
     "eslint-plugin-standard": "^1.3.2",
-    "flow-bin": "^0.23.0",
+    "flow-bin": "^0.24.0",
     "istanbul": "^1.0.0-alpha.2",
+    "lodash": "^4.11.2",
     "mocha": "^2.4.5",
     "unexpected": "^10.13.0"
   }
