--- a/packages/ludumpad-server/package.json
+++ b/packages/ludumpad-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ludumpad-server",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Spawn LudumPad servers and communicate with controllers.",
   "keywords": [
     "ludumpad",
@@ -38,7 +38,7 @@
     "express": "^4.13.4",
     "figlet": "^1.1.2",
     "ip": "^1.1.3",
-    "ludumpad-client": "0.0.0",
+    "ludumpad-client": "~0.0.0",
     "qrcode-terminal": "^0.10.0",
     "socket.io": "^1.4.6"
   },
