--- a/packages/ludumpad-mapper/package.json
+++ b/packages/ludumpad-mapper/package.json
@@ -41,6 +41,7 @@
     "prepublish": "npm run build"
   },
   "dependencies": {
+    "babel-runtime": "^6.6.1",
     "ludumpad-server": "~0.0.1",
     "minimist": "^1.2.0",
     "robotjs": "0.4.2"
