--- a/packages/ludumpad-mapper-electron/package.json
+++ b/packages/ludumpad-mapper-electron/package.json
@@ -41,7 +41,8 @@
     "babel-runtime": "^6.6.1",
     "electron-prebuilt": "^1.1.0",
     "json-beautify": "^1.0.1",
-    "ludumpad-mapper": "~0.0.3"
+    "ludumpad-mapper": "~0.0.3",
+    "qr-image": "^3.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
